use dto and form model, add status to order book
