# dtos/order_book.go
@@ -1,5 +1,0 @@
-package dtos
-
-// OrderBookDTO ...
-type OrderBookDTO struct {
-}
