# models/base.go
@@ -1,0 +1,11 @@
+package models
+
+import "time"
+
+// BaseModel extend gorm.Model
+type BaseModel struct {
+	ID        uint       `gorm:"primary_key" json:"id"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
+	DeletedAt *time.Time `sql:"index" json:"-"`
+}
